# Tavern-bot

./: Cargo.toml  TODO.txt
command_descriptions/: command_descriptions.txt
migrations/: 20230610094529_initial_migration.sql  20230710101951_logs.sql
src/: database.rs  guild.rs  main.rs  utils.rs
src/commands/: general_commands.rs  mod.rs  moderation_commands.rs  server_utils_commands.rs  test_commands.rs
src/hooks/: mod.rs  unknown_command.rs
src/quotes/: mod.rs
