[package]
name = "tavern-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.17"
rand = "0.8.5"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-rustls", "sqlite", "offline"]
